change log collector to promtail

--- a/templates/inventory.ini.j2
+++ b/templates/inventory.ini.j2
@@ -1,10 +1,10 @@
 [monitored]
 {% for instance in monitored %}
-{{instance}} ansible_user=root ansible_password=<password>
+{{instance}} ansible_user=root ansible_password=Utibeabasi6
 {%endfor%}
 
 [monitoring]
-{{monitoring}} ansible_user=root ansible_password=<password>
+{{monitoring}} ansible_user=root ansible_password=Utibeabasi6
 
 [logging]
-{{logging}} ansible_user=root ansible_password=<password>
+{{logging}} ansible_user=root ansible_password=Utibeabasi6
